add example to readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -11,6 +11,9 @@ A Hadoop Hive adapter for Sequel. Uses rbhive and thrift.
   require 'sequel'
   require 'sequel/hive'
 
+  DB = Sequel.connect("hive://localhost")
+  DB[:table_name].where(:date => "2011-05-05").limit(1)
+
 == Contributing to sequel-hive-adapter
  
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
